# TheRoom

./: README.md
game/: .gitignore  Cargo.toml  character.json  run.sh  settings.json
game/src/: audio.rs  character.rs  devmode.rs  game_phase.rs  items.rs  main.rs  network.rs  player.rs  renderer.rs  sanity.rs  scripting.rs  settings.rs  world.rs
game/src/shaders/: basic.frag  basic.vert  crosshair.frag
